# geolio

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
app/: CMakeLists.txt  main.cpp
cmake/: Dependencies.cmake  FindGeogram.cmake  Geogram.cmake
include/: tet_descriptor.h
include/geogram_mesh_utils/: hex_descriptor.h  hex_operations.h  surf_operations.h  tet_operations.h  tri_metrics.h  tri_operations.h
include/geolio/: hex_descriptor.h  hex_operations.h  pair_hash.h  surf_operations.h  tet_descriptor.h  tet_operations.h  tri_metrics.h  tri_operations.h
include/mesh_utils/: tet_operations.h
src/: CMakeLists.txt  hex_operations.cpp  surf_operations.cpp  tet_operations.cpp  tri_operations.cpp
src/common/: log.h
src/mesh_opt/: CMakeLists.txt  tetrahedron_operators.cpp  tetrahedron_operators.h  triangle_metrics.cpp  triangle_metrics.h  triangle_operators.cpp  triangle_operators.h
src/mesh_utils/: hex_descriptor.h  hex_operations.cpp  hex_operations.h  hex_operators.cpp  hexahedron_operators.cpp  hexahedron_operators.h  pair_hash.h  tet_descriptor.h  tet_operations.cpp  tet_operations.h  tet_operators.cpp  tet_operators.h  tetrahedron_operators.cpp  tetrahedron_operators.h  tri_metrics.cpp  tri_operations.cpp  tri_operations.h  tri_operators.cpp  triangle_metrics.cpp  triangle_metrics.h  triangle_operators.cpp  triangle_operators.h
src/robust_local_remeshing/: triangle_operators.h
tests/: CMakeLists.txt  environment_geogram.h  environment_spdlog.h  main.cpp  test_deps.cpp  test_hex_descriptor.cpp  test_hex_operations.cpp  test_tet_descriptor.cpp  test_tet_opeartions.h  test_tet_operations.cpp  test_tet_operators.cpp  test_tetrahedron_operators.cpp  test_tri_operations.cpp  test_tri_operations.h  test_tri_operators.cpp  test_triangle_operators.cpp  utils.h
tests/data/: sphere.mesh
