########################################################################################################################
# CMake options
########################################################################################################################
cmake_minimum_required(VERSION 3.30)
project(geolio)

if(WIN32)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /utf-8")
endif()
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

########################################################################################################################
# CMake module path
########################################################################################################################
list(PREPEND CMAKE_MODULE_PATH
        ${CMAKE_CURRENT_LIST_DIR}/cmake)

########################################################################################################################
# Include Deps
########################################################################################################################
include(Dependencies)

########################################################################################################################
# Add library
########################################################################################################################
add_library(geolio INTERFACE)

target_include_directories(geolio INTERFACE
        include/
)

########################################################################################################################
# Add subdirectories
########################################################################################################################
add_subdirectory(tests)